Phase 2 step 4: role-based access control + clean JSON serialization